--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,5 +10,8 @@ html(lang="en")
         header 
             h1 Noom
         main 
-            h2 하이헬로우안녕
+            ul 
+            form
+                input(type="text" placeholder="Write a massage", required)
+                button Send
         script(src="/public/js/app.js")
