에러 수정 및 참여, 퇴장시 닉네임 출력

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -16,8 +16,8 @@ html(lang="en")
                     button Enter Room
             div#room
                 h3
-                ul#name
-                form
+                ul
+                form#name
                     input(type="text" placeholder="nickname" required)
                     button Save
                 ul 
