--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,15 +11,12 @@ html(lang="en")
             h1 Noom
         main 
             div#welcome
-                form
-                    input(type="text" placeholder="room name" required)
+                form#enter
+                    input#enterName(type="text" placeholder="nickname" required)
+                    input#enterRoom(type="text" placeholder="room name" required)
                     button Enter Room
             div#room
                 h3
-                ul
-                form#name
-                    input(type="text" placeholder="nickname" required)
-                    button Save
                 ul 
                 form#msg
                     input(type="text" placeholder="message" required)
